# Deep_Learning_DVC_Template

./: README.md  pyproject.toml  setup.cfg  setup.py  template.py  tox.ini
research/: trials.ipynb
src/DeepClassifier/utils/: __init__.py  common.py
