## contains the metadata of the project


[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8    
    Operating System :: OS Independent


## Programming Language :: Python :: 3.7
## Programming Language :: Python :: 3.9 
## we can add this also . this is to mention that the package works on all three versions
## But in this case not needed


[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7   ## minimum requirement of python version. means works fine in version 3.7 


## options contains fixed installation for the project .Like which is absolutely necessary.


[options.extras_require]
testing =
    pytest>=7.1.3       ## helps to run unit testing and integretion testing
    mypy>=0.971         ## helps to check type error or not
    flake8>=5.0.4       ## helps to detect mistakes such as extra space, library imported but unused and Undefined name etc
    tox>=3.25.1         ## it helps to create different working env & to test the application locally
    black>=22.8.0       ## it helps to test the standard python structure.


## options.extras_require contains the testing packages


[options.package_data]
DeepClassifier = py.typed  ## this will help to ignore errors in the pacakges that we import.
  

[flake8]
max-line-length = 160   ## max number of characters in each line of code
exclude = __init__.py   ## as the name suggest certain files be ignored / excluded here __init__.py files